Fix: Use the right way to style link's underline
Previously I used border-bottom in order to get the ability to style the
line that appears under the links (it appears like a line, but actually
under the hood it isn't), I tried that time to use the  text-decoration
but I failed of using it correctly, now I learned about it and came back
 to do the right thing

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,12 +185,13 @@ footer {
 
 .attribution a:link {
   color: var(--white);
-  text-decoration: none;
-  border-bottom: 1px solid var(--green);
+  text-decoration: underline solid 1px var(--white);
 }
 .attribution a:visited {
   color: var(--grey-700);
+  text-decoration-color: var(--grey-700);
 }
 .attribution a:hover {
   color: var(--green);
+  text-decoration-color: var(--green);
 }
